--- a/css/index.css
+++ b/css/index.css
@@ -37,21 +37,23 @@
 .con .article_left{width:830px;float:left;padding-top:15px;}
 .con .article_left .article_tuiJ p{padding-right:20px;font-size:14px;color:#ababab;height:35px;line-height:40px;text-align:right;border-bottom:1px solid #ABADB3;}
 .con .article_left .article_tuiJ h3{font-weight:normal;color:#404040;font-size:16px;float:left;margin-top:7px;padding-left:15px;}
-.con .article_left .article_tit{border-bottom:1px dashed #ABADB3;padding:25px 0;}
+.con .article_left .article_tit{border-bottom:1px dashed #ABADB3;padding:30px 0;}
 .con .article_left .article_tit .article_tit_pic{border:1px solid #ABADB3;width:188px;height:150px;overflow:hidden;float:left;}
 .con .article_left .article_tit .article_tit_pic a img,.article_left .article_tit .article_tit_pic a{display:inline;width:188px;height:150px;}
 .con .article_left .article_tit .article_tit_pic a img{transition:all 1s;-webkit-transition:all 1s;-o-transition:all 1s;-moz-transition:all 1s;}
 .con .article_left .article_tit .article_tit_pic a:hover img{transform:scale(1.2);-webkit-transform:scale(1.2);-o-transform:scale(1.2);-moz-transform:scale(1.2);}
-.con .article_left .article_tit .article_tit_txt{float:right;width:615px;height:150px;padding:0 10px;}
+.con .article_left .article_tit .article_tit_txt{float:left;width:100%;height:50px;padding:0 10px;}
 .con .article_left .article_tit .article_tit_txt h4 a{color:#404040;}
 .con .article_left .article_tit .article_tit_txt h4 a:hover{color:#6fb5ee;}
-.con .article_left .article_tit .article_tit_txt p{font-size:12px;margin-top:5px;}
+.con .article_left .article_tit .article_tit_txt p{font-size:12px;margin-top:5px;margin-bottom:5px;}
 .con .article_left .article_tit .article_tit_txt p a{display:inline-block;text-indent:20px;color:#ababab;}
+.con .article_left .article_tit .article_tit_txt p a.title{font-size: 18px;color:#ababab;}
+.con .article_left .article_tit .article_tit_txt p a.athor{font-size: 12px;color:#ababab;}
 .con .article_left .article_tit .article_tit_txt p a.writer{background:url("../images/name.png")no-repeat 0px -3px;width:70px;}
 .con .article_left .article_tit .article_tit_txt p a.Clas{background:url("../images/newsbg01.png")no-repeat 0px 1px;width:90px;}
-.con .article_left .article_tit .article_tit_txt p a.time{background:url("../images/newsbg02.png")no-repeat 0px 1px;width:265px;}
-.con .article_left .article_tit .article_tit_txt p a.opine{background:url("../images/newsbg03.png")no-repeat 0px 1px;width:100px;}
-.con .article_left .article_tit .article_tit_txt p a.look{background:url("../images/newsbg04.png")no-repeat 0px 1px;width:90px;}
+.con .article_left .article_tit .article_tit_txt p a.time{background:url("../images/newsbg02.png")no-repeat 0px 1px;width:30%;}
+.con .article_left .article_tit .article_tit_txt p a.opine{background:url("../images/newsbg03.png")no-repeat 0px 1px;width:20%;float:right;}
+.con .article_left .article_tit .article_tit_txt p a.look{background:url("../images/newsbg04.png")no-repeat 0px 1px;width:20%;float:right;}
 .con .article_left .article_tit .article_tit_txt p.article_con{color:#404040;text-indent:2em;line-height:20px;width:615px;height:63px;overflow:hidden;padding-top:10px;}
 .con .article_left .article_tit .article_tit_txt .readAll{display:block;width:100px;line-height:35px;border:1px solid #ABADB3;color:#404040;text-align:center;font-size:14px;border-radius:3px;float:right;margin-top:2px;}
 .con .article_left .article_tit .article_tit_txt .readAll:hover{box-shadow:0 0 15px #8cc7c8;text-shadow:0 0 2px #aeaeae;}
