--- a/css/index.css
+++ b/css/index.css
@@ -47,13 +47,13 @@
 .con .article_left .article_tit .article_tit_txt h4 a:hover{color:#6fb5ee;}
 .con .article_left .article_tit .article_tit_txt p{font-size:12px;margin-top:5px;margin-bottom:5px;}
 .con .article_left .article_tit .article_tit_txt p a{display:inline-block;text-indent:20px;color:#ababab;}
-.con .article_left .article_tit .article_tit_txt p a.title{font-size: 18px;color:#ababab;}
-.con .article_left .article_tit .article_tit_txt p a.athor{font-size: 12px;color:#ababab;}
+.con .article_left .article_tit .article_tit_txt p a.title{font-size: 18px;color:#ababab;width:25%;}
+.con .article_left .article_tit .article_tit_txt p a.athor{font-size: 12px;color:#ababab;width:10%;}
 .con .article_left .article_tit .article_tit_txt p a.writer{background:url("../images/name.png")no-repeat 0px -3px;width:70px;}
-.con .article_left .article_tit .article_tit_txt p a.Clas{background:url("../images/newsbg01.png")no-repeat 0px 1px;width:90px;}
-.con .article_left .article_tit .article_tit_txt p a.time{background:url("../images/newsbg02.png")no-repeat 0px 1px;width:30%;}
-.con .article_left .article_tit .article_tit_txt p a.opine{background:url("../images/newsbg03.png")no-repeat 0px 1px;width:20%;float:right;}
-.con .article_left .article_tit .article_tit_txt p a.look{background:url("../images/newsbg04.png")no-repeat 0px 1px;width:20%;float:right;}
+.con .article_left .article_tit .article_tit_txt p a.Clas{background:url("../images/newsbg01.png")no-repeat 0px 1px;width:10%;}
+.con .article_left .article_tit .article_tit_txt p a.time{background:url("../images/newsbg02.png")no-repeat 0px 1px;width:25%;}
+.con .article_left .article_tit .article_tit_txt p a.opine{background:url("../images/newsbg03.png")no-repeat 0px 1px;width:15%;float:right;}
+.con .article_left .article_tit .article_tit_txt p a.look{background:url("../images/newsbg04.png")no-repeat 0px 1px;width:15%;float:right;}
 .con .article_left .article_tit .article_tit_txt p.article_con{color:#404040;text-indent:2em;line-height:20px;width:615px;height:63px;overflow:hidden;padding-top:10px;}
 .con .article_left .article_tit .article_tit_txt .readAll{display:block;width:100px;line-height:35px;border:1px solid #ABADB3;color:#404040;text-align:center;font-size:14px;border-radius:3px;float:right;margin-top:2px;}
 .con .article_left .article_tit .article_tit_txt .readAll:hover{box-shadow:0 0 15px #8cc7c8;text-shadow:0 0 2px #aeaeae;}
