--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -1,4 +1,10 @@
 @charset"utf-8";
+* {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    font-family: "microsoft yahei";
+}
 h3 a{color:#404040;}
 h3 a:hover{color:#6fb5ee;}
 .Index{height:45px;text-align:center;width:100%;bottom:25px;overflow:hidden;padding-top:25px;}
