--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -14,4 +14,5 @@ h3 a:hover{color:#6fb5ee;}
 .Index ul li a:hover{color:#c91b46;box-shadow:0 0 15px #c91b46;}
 .Index ul li a.Index_on{color:#c91b46;box-shadow:0 0 15px #c91b46;}
 
+.dtcontent img{margin: 20px auto;}
 
